# songpro-python

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  tasks.py
src/: line.py  part.py  section.py  song.py  songpro.py
src/songpro/: __init__.py  songpro.py
tests/: test_songpro.py
